--- a/templates/index2.html
+++ b/templates/index2.html
@@ -30,7 +30,7 @@
 </style>
 
 <div class="container my-5">
-    <h2 class="text-center text-primary mb-3" style="font-weight: bold;">🍨Welcome to Ice Cream Insights🍦</h2>
+    <h2 class="text-center text-primary mb-3" style="font-weight: bold;">🍨Welcome to Flavor Feedback🍦</h2>
     <p class="text-center text-muted mb-5" style="font-size: 1.2rem;">
         Discover the coolest scoops, flavors from around the world, and real user reviews — all in one delightful place!
     </p>
